tests/baselines/reference/nodeModulesAllowJsPackagePatternExportsTrailers(module=node20).errors.txt
node_modules/inner/index.d.ts(2,13): error TS2303: Circular definition of import alias 'cjs'.


==== index.js (0 errors) ====
    // esm format file
    import * as cjsi from "inner/cjs/index.cjs";
    import * as mjsi from "inner/mjs/index.mjs";
    import * as typei from "inner/js/index.js";
    cjsi;
    mjsi;
    typei;
==== index.mjs (0 errors) ====
    // esm format file
    import * as cjsi from "inner/cjs/index.cjs";
    import * as mjsi from "inner/mjs/index.mjs";
    import * as typei from "inner/js/index.js";
    cjsi;
    mjsi;
    typei;
==== index.cjs (0 errors) ====
    // cjs format file
    import * as cjsi from "inner/cjs/index.cjs";
    import * as mjsi from "inner/mjs/index.mjs";
    import * as typei from "inner/js/index.js";
    cjsi;
    mjsi;
    typei;
==== node_modules/inner/index.d.ts (1 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs/index.cjs";
                ~~~
!!! error TS2303: Circular definition of import alias 'cjs'.
    import * as mjs from "inner/mjs/index.mjs";
    import * as type from "inner/js/index.js";
    export { cjs };
    export { mjs };
    export { type };
==== node_modules/inner/index.d.mts (0 errors) ====
    // esm format file
    import * as cjs from "inner/cjs/index.cjs";
    import * as mjs from "inner/mjs/index.mjs";
    import * as type from "inner/js/index.js";
    export { cjs };
    export { mjs };
    export { type };
==== node_modules/inner/index.d.cts (0 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs/index.cjs";
    import * as mjs from "inner/mjs/index.mjs";
    import * as type from "inner/js/index.js";
    export { cjs };
    export { mjs };
    export { type };
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
    }
==== node_modules/inner/package.json (0 errors) ====
    {
        "name": "inner",
        "private": true,
        "exports": {
            "./cjs/*.cjs": "./*.cjs",
            "./mjs/*.mjs": "./*.mjs",
            "./js/*.js": "./*.js"
        }
    }